--- a/react-app/src/components/Brewery/BreweryForm.css
+++ b/react-app/src/components/Brewery/BreweryForm.css
@@ -1,15 +1,18 @@
+.total-breweries {
+    padding-right: 50px;
+}
+
 
 .brewery-box {
 
         display: flex;
         border-style: solid;
-        border-width: 5px;
-        border-radius: 5px;
-        width: 1000px;
+        border-width: 1px;
+        border-radius: 1px;
+        width: 350px;
         flex-direction: column;
         align-items: center;
-        margin-bottom: 10px;
-        margin-left: 10px;
+        padding-left: 10px;
         background-color: rgba(201, 193, 117, 0.782);
 
 }
@@ -29,7 +32,7 @@ ul {
     align-items: center;
     padding: 0px;
   }
-/*
+
 
 form {
     background-color: white;
@@ -38,16 +41,18 @@ form {
     width: 300px;
 }
 
-.input {
-    background-color: white;
+input {
+    margin: 2px;
+    background-color: rgb(255, 255, 255);
     margin-top: 5px;
     justify-content: center;
     align-items: center;
+    margin-right: 30px;
 
 }
 
-.label {
-    color: red;
+label {
+    color: rgb(111, 68, 220);
     display: inline-block;
     display: flex;
     justify-content: space-between;
@@ -58,6 +63,6 @@ button {
     margin-top: 5px;
 }
 
-#loginButton {
-
-} */
+#breweriespage {
+    display: flex;
+}
