--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,25 @@
 /* TODO Add site wide styles */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Quicksand', sans-serif;
+  color: #05283a;
+}
+
+html {
+  height: 100%;
+  background-color: #fcfbf9;
+  font-size: 14px;
+}
+
+body {
+  height: 100%;
+}
+
+.button {
+  border: 1px solid #cdcdcd;
+  border-radius: 5px;
+  padding: 4px 8px 4px 8px;
+  color: #05283a;
+  background-color: #fcfbf9;
+}
