--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -4,17 +4,48 @@
   height: 100%;
 }
 
-.home {
+.home-bg {
   background-image: url('./bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-color: blue;
-  /* height: 1000px; */
-  margin-top: 0;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  top: -190px;
+  left: 0;
+  z-index: -1;
 }
 
 .container {
   width: 300px;
-  margin-left: 400px;
-  margin-top: 300px;
+  margin-left: 500px;
+  margin-top: 200px;
+  position: relative;
+}
+
+.color-block {
+  height: 200px;
+  width: 80px;
+  top: -20px;
+  left: -20px;
+  position: absolute;
+  background-color: #5ca33e;
+  z-index: -1;
+}
+
+.home-welcome {
+  font: 32px;
+  font-weight: 600;
+}
+
+.home-title {
+  font: 72px;
+  margin-top: 10px;
+}
+
+.home-description {
+  font: 18px;
+  font-weight: 500;
+  margin-top: 30px;
 }
