--- a/react-app/src/components/Brewery/BreweryForm.css
+++ b/react-app/src/components/Brewery/BreweryForm.css
@@ -1,3 +1,12 @@
+img {
+    margin: 30px;
+    width: 200px;
+    height: 200px;
+    border-style: double;
+    border-color: black;
+    border-width: 5px;
+    border-radius: 2px;
+  }
 .total-breweries {
   padding-right: 50px;
   margin-left: 50px;
@@ -20,15 +29,7 @@
     flex-direction: column;
     align-items: center;
 }
-img {
-    margin: 30px;
-    width: 200px;
-    height: 200px;
-    border-style: double;
-    border-color: black;
-    border-width: 5px;
-    border-radius: 2px;
-  }
+
 
 ul {
   list-style-type: none;
@@ -52,9 +53,39 @@ form {
     display: flex;
     flex-direction: column;
     width: 300px;
+    padding:20px
 }
 
-input,
+.beer-list{
+    border-color: black;
+    border-width: 3px;
+    border-radius: 2px;
+    margin-left: 10px;
+    width: 500px
+
+}
+.beer-list{
+
+    margin-left: 10px;
+    width: 500px
+}
+
+.beer-list-box{
+    border-top: #5ca33e;
+    border-bottom: #5ca33e;
+    border-style: solid;
+    border-color: black;
+    border-width: 3px;
+    border-radius: 2px;
+
+
+}
+.beer-list-img {
+    height: 100px;
+    width: 100px;
+    border:solid, black, 5px;
+    padding: 2px
+}
 select {
   margin: 2px;
   background-color: rgb(255, 255, 255);
