--- a/react-app/src/components/Brewery/BreweryForm.css
+++ b/react-app/src/components/Brewery/BreweryForm.css
@@ -1,12 +1,13 @@
-img {
-    margin: 30px;
-    width: 200px;
-    height: 200px;
-    border-style: double;
-    border-color: black;
-    border-width: 5px;
-    border-radius: 2px;
-  }
+.brewery-index-img {
+  margin: 30px;
+  width: 200px;
+  height: 200px;
+  border-style: double;
+  border-color: black;
+  border-width: 5px;
+  border-radius: 2px;
+}
+
 .total-breweries {
   padding-right: 50px;
   margin-left: 50px;
@@ -18,7 +19,6 @@ img {
   flex-direction: column;
 }
 
-
 .brewery-box {
   display: flex;
   border-style: solid;
@@ -28,14 +28,13 @@ img {
   flex-direction: column;
   align-items: center;
   padding-left: 10px;
-  background-color: #fcfbf9
+  background-color: #fcfbf9;
 }
 .brewery-links {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
 
 ul {
   list-style-type: none;
@@ -49,59 +48,52 @@ ul {
 }
 
 .brewery-font {
-color: #5ca33e;
-
+  color: #5ca33e;
 }
 
-
-form {
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    padding:20px
+.brewery-form {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  padding: 20px;
 }
 
-.beer-list{
-    border-color: black;
-    border-width: 3px;
-    border-radius: 2px;
-    margin-left: 10px;
-    width: 500px
-
-}
-.beer-list{
-
-    margin-left: 10px;
-    width: 200px
+.brewery-page-beer-list {
+  border-color: black;
+  border-width: 3px;
+  border-radius: 2px;
+  margin-left: 10px;
+  /* width: 500px; */
 }
 
-.beer-list-box{
-    border-top: #5ca33e;
-    border-bottom: #5ca33e;
-    border-style: solid;
-    border-color: black;
-    border-width: 3px;
-    border-radius: 2px;
-    width: 200px
-
-
+.beer-list-box {
+  border-top: #5ca33e;
+  border-bottom: #5ca33e;
+  border-style: solid;
+  border-color: black;
+  border-width: 3px;
+  border-radius: 2px;
+  width: 200px;
 }
 
 .beer-list-main {
-margin-left: 20px;
+  margin-left: 20px;
 }
-.beer-list-link{
-display: flex;
-align-items: center;
-flex-direction: column;
+
+.beer-list-link {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
+
 .beer-list-img {
-    height: 100px;
-    width: 100px;
-    border:solid, black, 5px;
-    padding: 2px
+  height: 100px;
+  width: 100px;
+  border: solid, black, 5px;
+  padding: 2px;
 }
+
 select {
   margin: 2px;
   background-color: rgb(255, 255, 255);
@@ -122,13 +114,14 @@ label {
 button {
   margin-top: 5px;
   margin-bottom: 20px;
-  margin-right: 9px
+  margin-right: 9px;
 }
 
 button:hover {
-background-color: rgb(209, 209, 209);
-color: #5ca33e
-  }
+  background-color: rgb(209, 209, 209);
+  color: #5ca33e;
+}
+
 #breweriespage {
   display: flex;
 }
