--- a/react-app/src/components/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/LoginFormModal/LoginForm.css
@@ -1,6 +1,7 @@
 .login-form {
   padding: 20px;
   width: 200px;
+  color: #05283a;
 
   background-image: linear-gradient(-225deg, #fcfbf9 50%, #5ca33e 50%);
 }
