--- a/react-app/src/components/Brewery/BreweryForm.css
+++ b/react-app/src/components/Brewery/BreweryForm.css
@@ -19,7 +19,7 @@
   flex-direction: column;
 }
 
-.brewery-box {
+/* .brewery-box {
   display: flex;
   border-style: solid;
   border-width: 1px;
@@ -29,7 +29,7 @@
   align-items: center;
   padding-left: 10px;
   background-color: #fcfbf9;
-}
+} */
 .brewery-links {
   display: flex;
   flex-direction: column;
