--- a/react-app/src/components/beers/BeerIndex.css
+++ b/react-app/src/components/beers/BeerIndex.css
@@ -1,10 +1,11 @@
 .beer-list {
   display: flex;
+  justify-content: center;
 }
 
 .beer-list-text {
   width: 220px;
-  margin-left: 260px;
+  /* margin-left: 200px; */
   margin-top: 100px;
 }
 
@@ -44,16 +45,15 @@
 .beer-index {
   margin-top: 40px;
   display: flex;
-
   justify-content: space-between;
   margin-left: 50px;
-  width: 1000px;
+  width: 1050px;
   overflow: scroll;
 }
 
 .beer-detail {
   flex-basis: 200px;
-  height: 400px;
+  height: 450px;
   flex-grow: 0;
   flex-shrink: 0;
   /* border-radius: 25px; */
@@ -87,6 +87,7 @@
 .beer-list-brewery {
   margin-top: 5px;
   font-weight: 600;
+  color: #05283a;
 }
 
 .add-beer-button {
@@ -101,4 +102,8 @@
   width: 500px;
   margin: 0 auto;
   margin-top: 50px;
+}
+
+.beer-image-container {
+  height: 280px;
 }
