--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -58,3 +58,14 @@ input[type='number'] {
 a {
   text-decoration: none;
 }
+
+.footer {
+  height: 50px;
+  width: 1000px;
+  position: fixed;
+  left: 400px;
+  bottom: 0px;
+  height: 30px;
+  width: 100%;
+  background-color: #fcfbf9;
+}
