--- a/react-app/src/components/reviews/ReviewIndex.css
+++ b/react-app/src/components/reviews/ReviewIndex.css
@@ -8,7 +8,8 @@
 }
 
 .review-feed-container {
-  margin-left: 300px;
-  margin-top: 80px;
+  /* margin-left: 300px;
+  margin-top: 80px; */
+  margin: 80px auto;
   width: 1100px;
 }
