--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -41,7 +41,7 @@ form {
   flex-direction: column;
 }
 
-form > *:not(:first-child) {
+form>*:not(:first-child) {
   margin-top: 5px;
 }
 
@@ -63,9 +63,9 @@ a {
   height: 50px;
   width: 1000px;
   position: fixed;
-  left: 400px;
+  /* left: 400px; */
   bottom: 0px;
   height: 30px;
   width: 100%;
-  background-color: #fcfbf9;
+  /* background-color: #fcfbf9; */
 }
