--- a/react-app/src/components/beers/BeerIndex.css
+++ b/react-app/src/components/beers/BeerIndex.css
@@ -1,6 +1,8 @@
 .beer-list {
   display: flex;
   justify-content: center;
+  width: 100%;
+  overflow: hidden;
 }
 
 .beer-list-text {
@@ -47,20 +49,27 @@
   display: flex;
   justify-content: space-between;
   margin-left: 50px;
-  width: 1050px;
-  overflow: scroll;
-
+  width: 500px;
+  transition: transform 0.3s ease-in-out;
+  
 }
 
 .beer-detail {
+
+  flex: 0 0 auto;
   flex-basis: 200px;
   height: 450px;
-  flex-grow: 0;
-  flex-shrink: 0;
+  /* flex-grow: 0;
+  flex-shrink: 0; */
   /* border-radius: 25px; */
-  padding: 20px;
+  /* padding: 20px;
   margin-left: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 10px; */
+  width: 100%;
+  height: 200px;
+  /* Add any desired styling */
+  background-color: #f1f1f1;
+  margin-right: 10px;
 }
 
 .beer-detail img {
