--- a/react-app/src/components/beers/BeerIndex.css
+++ b/react-app/src/components/beers/BeerIndex.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   position: relative;
   height: 500px;
-  border: dotted red 3px;
+  /* border: dotted red 3px; */
   flex-direction: column;
   align-items: center;
 }
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 85%
 
 }
 
@@ -21,6 +22,7 @@
   max-width: 266px;
   position: relative;
   left: 20%;
+  margin: 0 auto;
 
 }
 
@@ -64,7 +66,7 @@
   width: 95%;
   position: relative;
   height: 500px;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.9s ease-in-out;
   flex-direction: row;
 }
 
@@ -147,7 +149,7 @@
   height: 200px;
   width: 200px;
   top: 408px;
-  left: 972px;
+  left: 30%;
   position: relative;
   background-color: #5ca33e;
   border-radius: 50%;
