--- a/react-app/src/components/beers/BeerIndex.css
+++ b/react-app/src/components/beers/BeerIndex.css
@@ -1,6 +1,6 @@
 .beer-list {
   display: flex;
-  width: 60%;
+  width: 70%;
   overflow: hidden;
   position: relative;
   height: 500px;
@@ -65,10 +65,10 @@
   justify-content: flex-start;
   width: 100%; /* Update the width to 100% */
   position: relative;
-  height: 500px;
+  height: 550px;
   transition: transform 0.9s ease-in-out;
   flex-direction: row;
-  overflow-x: scroll; /* Enable horizontal scrolling */
+  overflow:scroll; /* Enable horizontal scrolling */
   scroll-behavior: smooth; /* Optional: Enable smooth scrolling */
 }
 
@@ -102,7 +102,7 @@
 }
 
 .beer-name {
-  margin-top: 40px;
+  margin-top: 15px;
   font-weight: bold;
   color: #5ca33e;
   font-weight: 600;
